# esp32_fuota_with_rollback

./: README.md
esp32_fuota_rollback/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
esp32_fuota_rollback/main/: CMakeLists.txt  Kconfig  Kconfig:Zone.Identifier  fw_version.h  main.c  prio_tasks.h  stacks_sizes.h
esp32_fuota_rollback/main/breathing_light/: breathing_light.c  breathing_light.h
esp32_fuota_rollback/main/esp32_ota/: esp32_ota.c  esp32_ota.h
esp32_fuota_rollback/main/nvs_rw/: nvs_rw.c  nvs_rw.h
esp32_fuota_rollback/main/socket_tcp_server_wifi_OTA/: socket_tcp_server_wifi_OTA.c  socket_tcp_server_wifi_OTA.h
esp32_fuota_rollback/main/wifi_st/: wifi_st.c  wifi_st.h
