idf_component_register(SRCS "main.c"
                      "wifi_st/wifi_st.c"
                      "nvs_rw/nvs_rw.c"
                      "esp32_ota/esp32_ota.c"
                      "socket_tcp_server_wifi_OTA/socket_tcp_server_wifi_OTA.c"
                      "breathing_light/breathing_light.c"
                    INCLUDE_DIRS "")
